Prática CSS3 - Estilizando meu site

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-    <ul>
+    <ul id="menu">
         <li>
             <a href="index.html">Home</a>
         </li>
@@ -17,21 +18,52 @@
         </li>
     </ul>
 
-  <h1>Sobre a Letícia</h1> 
+  <h1 class="center">Sobre a Letícia</h1> 
+  <div class="container">
+
+    <div>
+        <img class="br-50 p-30" src="assets/img/leticia.jpg"  alt="Foto do Criador desse Conteúdo" width="250" height="250">
+    </div>
+
+    <div class="p-30">
+        <p class="justify">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ut explicabo iste provident excepturi possimus! Voluptates enim distinctio corporis vitae earum eum tenetur asperiores et fugit, quibusdam voluptate, dolore repudiandae.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam alias voluptatum sapiente? Doloremque vel dolorum quas velit, molestiae in doloribus, ab adipisci reiciendis odit explicabo natus unde molestias dignissimos!
+        </p>
+        <p class="justify">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam alias voluptatum sapiente? Doloremque vel dolorum quas velit, molestiae in doloribus, ab adipisci reiciendis odit explicabo natus unde molestias dignissimos!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam alias voluptatum sapiente? Doloremque vel dolorum quas velit, molestiae in doloribus, ab adipisci reiciendis odit explicabo natus unde molestias dignissimos!
+        </p>
+    </div>
+
+  </div>
   
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ut explicabo iste provident excepturi possimus! Voluptates enim distinctio corporis vitae earum eum tenetur asperiores et fugit, quibusdam voluptate, dolore repudiandae.
-</p>
-<p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam alias voluptatum sapiente? Doloremque vel dolorum quas velit, molestiae in doloribus, ab adipisci reiciendis odit explicabo natus unde molestias dignissimos!
-</p>
 
-<img src="assets/img/leticia.jpg"  alt="Foto do Criador desse Conteúdo" width="250" height="250">
+<h2 class="center">Meu vídeo favorito:</h2>
+<div class="container mb-50">
+    <iframe width="415" height="315" src="https://www.youtube.com/embed/qlF0IMT4ERQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<hr>
+<footer>
 
-<h2>Meu vídeo favorito:</h2>
+<div class="container">
+    <a href="https://github.com/leticialsouza" target="_blank">
+<img class="tm-social p-30" src="assets/img/github.png" alt="logo do github">
+</a>
 
-<iframe width="415" height="315" src="https://www.youtube.com/embed/qlF0IMT4ERQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<a href="https://www.instagram.com/leticianofront/" target="_blank">
+<img class="tm-social p-30" src="assets/img/instagram.png" alt="logo do instagram">
+</a>
 
+<a href="https://www.linkedin.com/in/leticia-souza-2881b2214/" target="_blank">
+<img class="tm-social p-30" src="assets/img/linkedin.png" alt="logo do linkedin">
+</a>
+</div>
+
+    <p class="center">
+Todos os direitos reservados: Letícia Souza. &copy;
+    </p>
+</footer>
 
 </body>
 </html>
