implementação de JavaScript no blog

--- a/contato.html
+++ b/contato.html
@@ -23,19 +23,19 @@
     <div>
         <form>
             <label for="nome">Nome:</label>
-            <input type="text" id="nome">
-            <br>
+            <input type="text" id="nome" onkeyup="validaNome()">
+            <div id='txtNome'></div>
             <br>
             <label for="email">Email:</label>
-            <input type="text" id="email">
-            <br>
+            <input type="text" id="email" onkeyup="validaEmail()">
+            <div id='txtEmail'></div>
             <br>
             <label for="email">Assunto:</label>
             <br>
-            <textarea name="assunto" id="assunto" cols="60" rows="05"></textarea>
+            <textarea name="assunto" id="assunto" cols="60" rows="05" onkeyup="validaAssunto()"></textarea>
+            <div id='txtAssunto'></div>
             <br>
-            <br>
-            <button>Enviar</button>
+            <button onclick="enviar()">Enviar</button>
             </form>
     </div>
 </div>
@@ -60,6 +60,8 @@
     Todos os direitos reservados: Letícia Souza. &copy;
         </p>
     </footer>
+
+<script src="assets/js/script.js"></script>
 
 </body>
 </html>
